--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 layout_spectrum: 0.7291136705316603
 typography_spectrum: 0.12274174974299967
+style: the-composer
 color:
   brandStrength: 0.23343687946908176
   lightness: 0.7578311052639037
